@@ -2,6 +2,7 @@
   * Add ability to supply two ordered factors with identical levels as control / cases
   * Deprecate dangerous use of a matrix as response / predictor with a warning
   * Forward 'best.method' and 'best.weights' arguments to 'coords' in 'ci.thresholds'
+  * pAUC correction is undefined for partial AUC below the diagonal (result < 0.5) and now returns NA (with a warning). Thanks Vincenzo Lagani for the report.
 
 1.7.3 (2014-06-14)
   * Fixed AUC of binomial-smoothed ROC off by 100^2 (thanks Bao-Li Chang for the report)
